# twodubem

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example01.ipynb
examples/example01/: example01.ipynb  example01_z.npy  example01_zerr.npy  example01_zx.npy  example01_zxerr.npy  example01_zy.npy  example01_zyerr.npy
examples/example02/: example02.ipynb
twodubem/: __init__.py  _internal.py  boundary.py  element.py  geometry.py  green.py  laplace.py  potential.py  solver.py
