[project]
name = 'twodubem'
version = '0.1.0'
dependencies = ['numpy>=2.0']
authors = [
    {name = 'Rodrigo Castro', email = 'code@rpc.aleeas.com'}
]
description = "TwoDuBEM solves the 2D Laplace's equation using the Boundary Element Method."
readme = 'README.md'
requires-python = '>=3.9'
license = {file = 'LICENSE'}
keywords = ['Potential', 'Laplace', 'Boundary Element Method']
classifiers = [
  'Development Status :: 1 - Planning',
  'License :: OSI Approved :: MIT License',
  'Intended Audience :: Education',
  'Intended Audience :: Science/Research',
  'Topic :: Scientific/Engineering',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
  'Programming Language :: Python :: 3 :: Only',
  'Typing :: Typed',
  'Operating System :: OS Independent',
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
'Source' = 'https://github.com/rodpcastro/twodubem'
